--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"displayName": "Cpp Comment Generator",
 	"description": "Generates comments for the chosen C++ function",
 	"description_zh": "为所选的 C++ 函数生成注释",
+	"purpose": "vscode-extension",
 	"icon": "image/icon.png",
 	"version": "1.0.2",
 	"engines": {
